# dgh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  dgh.py  mappings.py  pyproject.toml
dgh/: __init__.py  auxiliary.py  constants.py  dgh.py  fw.py  mappings.py  spaces.py
src/: constants.py  dgh.py  fw.py  mappings.py
tests/: test_upper.py
